--- a/src/components/PortfolioItem.astro
+++ b/src/components/PortfolioItem.astro
@@ -1,7 +1,6 @@
 ---
 // src/components/PortfolioItem.astro
-import Image from "astro/components/Image.astro";
-// import type { Project, PublicProject, ProtectedProject } from "../lib/projects";
+import { Image } from "astro:assets";
 
 interface Props {
   id: string;
