--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Form from "../components/Form.jsx";
+import Form from "../components/Form.astro";
 
 const title = "Tim Hilton - Contact";
 ---
@@ -8,7 +8,7 @@ const title = "Tim Hilton - Contact";
 <Layout title={title}>
     <section transition:animate="slide">
         <h2><span transition:name="fullName">Contact Me</span></h2>
-        <Form client:load />
+        <Form/>
     </section>
 </Layout>
 
