fix form rendering

--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -9,7 +9,7 @@ export const prerender = true;
         id="contactForm"
         name="contact"
         method="POST"
-        data-netlify: "true"
+        data-netlify="true"
         data-netlify-honeypot="bot-field"
         action="/"
         class={styles.contactForm}
