--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,6 +17,7 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>{title}</title>
 		<link rel="icon" type="image/x-icon" href="/favicon.ico" />
+		<meta name="robots" content="noindex, nofollow" />
 		<ViewTransitions />
 		<ThemeScript />
 	</head>
