--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import Navigation from "../components/Navigation.astro";
 import Footer from "../components/Footer.astro";
 import { ViewTransitions } from "astro:transitions";
 import ThemeScript from "../components/ThemeScript.astro";
+import Analytics from "../components/Analytics.astro";
 interface Props {
 	title: string;
 }
@@ -20,6 +21,7 @@ const { title } = Astro.props;
 		<meta name="robots" content="noindex, nofollow" />
 		<ViewTransitions />
 		<ThemeScript />
+		<Analytics />
 	</head>
 	<body>
 		<Navigation />
