(code): cleaning things up and improving mobile experience for skills

--- a/src/pages/skills.astro
+++ b/src/pages/skills.astro
@@ -13,7 +13,9 @@ const title = "Tim Hilton - Technical Skills";
 <Layout title={title}>
     <section class="container">
         <h2><span transition:name="fullName">Technical Skills</span></h2>
-        <SkillsCloud client:only="react" />
+        <div style="width: 100%; height: 630px; position: relative;">
+            <SkillsCloud client:only="react" />
+        </div>
         <SkillsLegend client:only="react" />
 
         <div class="certifications">
@@ -41,6 +43,7 @@ const title = "Tim Hilton - Technical Skills";
             padding: 3rem 2rem 2rem;
 
             @media screen and (max-width: 768px) {
+                width: 100%;
                 padding: 3rem 0 2rem;
                 height: max-content;
             }
@@ -50,6 +53,10 @@ const title = "Tim Hilton - Technical Skills";
             font-size: 2.5rem;
             font-weight: bold;
             margin-bottom: 24px;
+            @media screen and (max-width: 768px) {
+                margin-inline-start: 12.5vw;
+                margin-inline-end: 12.5vw;
+            }
         }
 
         .certifications {
@@ -63,6 +70,8 @@ const title = "Tim Hilton - Technical Skills";
             }
 
             @media screen and (max-width: 768px) {
+                margin-inline-start: 12.5vw;
+                margin-inline-end: 12.5vw;
                 img {
                     width: 30vw;
                     height: auto;
