Set up storkblok for blog entries

--- a/src/pages/skills.astro
+++ b/src/pages/skills.astro
@@ -1,8 +1,8 @@
 ---
 import { Image } from "astro:assets";
 
-import SkillsCloud from "../components/SkillsCloud.jsx";
-import SkillsLegend from "../components/SkillsLegend.jsx";
+import SkillsCloud from "../components/skills/SkillsCloud.jsx";
+import SkillsLegend from "../components/skills/SkillsLegend.jsx";
 import Layout from "../layouts/Layout.astro";
 import aws from "../images/aws-certified-cloud-practitioner.png";
 import aipractitioner from "../images/aws-certified-ai-practitioner.png";
