--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -37,3 +37,51 @@ const title = "Tim Hilton - Blog";
         </ul>
     </main>
 </Layout>
+
+    <style>
+        main {
+            width: 100%;
+            max-width: 980px
+            margin: 0 auto;
+            padding: 4rem 2rem;
+
+            @media screen and (max-width: 768px) {
+                max-width: 414px;
+                width: 87.5%;
+                margin: 0 auto;
+                padding: 3rem 0;
+            }
+        }
+
+        h1 {
+            font-size: 2.5rem;
+            font-weight: bold;
+            margin-bottom: 24px;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        li {
+            margin-bottom: 16px;
+            border: 1px solid var(--text-color);
+            padding: 1rem;
+            border-radius: 8px;
+        }
+
+        a {
+            color: var(--text-color);
+            text-decoration: none;
+            font-size: 1.5em;
+
+            @media screen and (max-width: 768px) {
+                font-size: 1.25em;
+            }
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
