--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -31,7 +31,7 @@ const blocks = story.content.body || [];
     <div class="container">
         <a
             href="/blog"
-            style="display: inline-flex; align-items: center; text-decoration: none; color: inherit; font-size: 0.9rem;"
+            class="back-link"
         >
             <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -82,6 +82,7 @@ const blocks = story.content.body || [];
         @media screen and (max-width: 768px) {
             max-width: 414px;
             width: 87.5%;
+            padding-top: 2rem
         }
     }
 
@@ -96,5 +97,14 @@ const blocks = story.content.body || [];
             padding: 3rem 0 2rem;
             height: max-content;
         }
+    }
+
+    .back-link {
+        display: flex;
+        align-items: center;
+        color: var(--text-color);
+        text-decoration: none;
+        font-size: 0.9rem;
+        margin: 1rem 2rem 0 2rem
     }
 </style>
