--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -12,7 +12,7 @@ const title = "Tim Hilton - Work";
 
 <Layout title={title}>
     <section class="container">
-        <h2><span transition:name="fullName">Work</span></h2>
+        <h2 transition:name="fullName">Work</h2>
         <div class="portfolio-grid">
             {
                 projects.map((project, index) => (
