--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -9,7 +9,7 @@ const title = "Tim Hilton - Contact";
 
 <Layout title={title}>
     <section transition:animate="slide">
-        <h2><span transition:name="fullName">Contact Me</span></h2>
+        <h2 transition:name="fullName">Contact Me</h2>
         <form name="contact" data-netlify="true" data-netlify-honeypot="bot-field" hidden>
             <input type="text" name="name" />
             <input type="email" name="email" />
