--- a/src/pages/skills.astro
+++ b/src/pages/skills.astro
@@ -12,7 +12,7 @@ const title = "Tim Hilton - Technical Skills";
 
 <Layout title={title}>
     <section class="container">
-        <h2><span transition:name="fullName">Technical Skills</span></h2>
+        <h2 transition:name="fullName">Technical Skills</h2>
         <div style="width: 100%; height: 630px; position: relative;">
             <SkillsCloud client:only="react" />
         </div>
