(style): fix blog width style

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -41,7 +41,7 @@ const title = "Tim Hilton - Blog";
     <style>
         main {
             width: 100%;
-            max-width: 980px
+            max-width: 980px;
             margin: 0 auto;
             padding: 4rem 2rem;
 
