update og description

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,7 @@ interface Props {
 
 const {
 	title = "Tim Hilton",
-	description = "Senior Web Engineer & Builder. Blog posts on web development, DIY projects, and more.",
+	description = "Web Engineering Leader & Builder.",
 	image = "../images/og-image.png",
 	url = "https://timhilton.dev",
 } = Astro.props;
